# dbOps.ai

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  pyrightconfig.json  requirements.txt  start_api.py  start_chatbot.py  start_dashboard.py
api/: query.py  v1.py  whatsapp_webhook.py
calling/: app.py  database.py  models.py  orchestrator.py  twilio_service.py  voice.py
channels/telegram/: bot.py  utils.py
channels/whatsapp/: send_message.py  utils.py  webhook.py
chatbot_ui/: app.js  index.html  style.css
nl_sql/: __init__.py  config.py  db_schema.py  logger.py  nl_to_sql.py  query_executor.py  sql_validator.py
output/: 20260622-133524-show_me_top_6_employees.xlsx  20260622-151435-give_me_any_15_employees_names.xlsx  20260622-161708-give_me_all_sales_territories.xlsx  20260622-164657-Show_employees_and_their_curre.xlsx  20260622-222924-Show_all_employees_and_their_j.xlsx  20260622-230730-Show_the_first_100_sales_order.xlsx  20260623-143005-show_first_2_sales_orders.xlsx  20260623-150928-Show_the_first_100_sales_order.xlsx
shared/: ai.py  conversation.py  prompts.py
static/: app.js  index.html  style.css
tests/: test_nl_to_sql.py  test_pipeline.py  test_query_executor.py
