[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-fetcher"
version = "0.1.0"
description = "Multi-channel AI communication platform (NL-to-SQL, dashboard, API, WhatsApp, Telegram, voice)."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["nl_sql*", "api*", "shared*", "channels*", "calling*"]
